--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ on:
       - terraform/**
 env:
   # credentials for deployment to AWS
-  AWS_ACESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_ACESS_KEY_ID: ${{ secrets.AWS_ACESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   # S3 bucket for the terraform state.
   BUCKET_TF_STATE: ${{ secrets.BUCKET_TF }}
