--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ on:
       - terraform/**
 env:
   # credentials for deployment to AWS
-  AWS_ACESSS_KEY_ID: ${{ secrets.AWS_ACESSS_KEY_ID}}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACESSS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   # S3 bucket for the terraform state.
   BUCKET_TF_STATE: ${{ secrets.BUCKET_TF }}
@@ -34,9 +34,18 @@ jobs:
       - name: Setup Terraform with specified version on the runner
         uses: hashicorp/setup-terraform@v3
 
+      # - name: Terraform Init
+      #   id: init
+      #   run: terraform init -backend-config "bucket=$BUCKET_TF_STATE"
+
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config "bucket=$BUCKET_TF_STATE"
+        run: |
+          terraform init \
+            -backend-config "bucket=$BUCKET_TF_STATE" \
+            -backend-config "access_key=$AWS_ACCESS_KEY_ID" \
+            -backend-config "secret_key=$AWS_SECRET_ACCESS_KEY" \
+            -backend-config "region=$AWS_REGION"
 
       - name: Terraform Format
         id: fmt
